# Care_Connect

./: .env.example  .gitignore  Quick recap.txt  README.md  pyproject.toml  requirements.txt  run_api.py  run_api.sh
api/: __init__.py  main.py
config/: pipeline.yaml  topics.yaml
data/chroma_db/8a3678b8-47b0-4e05-b627-930f4b2ea9df/: index_metadata.pickle
data/raw/medlineplus/: medlineplus_raw.json
data/raw/nimh/: nimh_raw.json
data/raw/pubmed/: pubmed_raw.json
src/: __init__.py  cli.py  config.py  pipeline.py
src/extractors/: __init__.py  base.py  medlineplus.py  nimh.py  pubmed.py
src/lookup/: __init__.py  on_demand_fetch.py  topic_lookup.py
src/processing/: __init__.py  chunker.py  cleaner.py
src/rag/: __init__.py  ollama_rag.py  response_cache.py
src/storage/: __init__.py  chroma_store.py  embedder.py
src/utils/: logger.py
tests/: test_lookup_flow.py  test_nimh_search.py  test_response_cache.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: BotBubble.jsx  ChatInputBar.jsx  CitationCard.jsx  CrisisBanner.jsx  DisclaimerBanner.jsx  FeedbackButtons.jsx  Header.jsx  TopicPill.jsx  TypingIndicator.jsx  UserBubble.jsx  WelcomeMessage.jsx
ui/src/pages/: ChatPage.jsx  ComparisonPage.jsx
