[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "care-connect-pipeline"
version = "0.1.0"
description = "Care Connect configurable data extraction pipeline"
requires-python = ">=3.11"
dependencies = [
  "biopython>=1.83",
  "beautifulsoup4>=4.12.0",
  "click>=8.1.0",
  "datasets>=2.19.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "tenacity>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
